# abracapocus_2

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: base.py  complexity_classifier.py  management_agent.py  plan_critic.py  planning_agent.py  research_agent.py  reviewer_agent.py  verifier_agent.py
backends/: aider_cli.py  base.py  claude_code_cli.py  codex_cli.py  demo_cli.py  gemini_cli.py  openrouter_models.py  registry.py
config/: model_profiles.yaml
docs/: ABRACAPOCUS_PROJECT_SETUP.md  ENHANCEMENT_PLAN.md  QUICKSTART.md  architecture.md  backends.md  demo_status.md  extensibility.md  gaps.md  operations.md  plans_tasks.md
models/: plan.py  project.py  reports.py  state.py
orchestrator/: supervisor.py
phases/: README.md
plans/: README.md  task-2.5.json  task-3.1.json  task-3.2.json  task-3.3.json  task-3.4.json  task-3.5.json  task-4.4.json  task-7.1.json  task-7.2.json  task-7.3.json  task-7.4.json  task-7.5.json  task-allow-main.json  task-custom-task.json  task-demo-self-improve.json  task-history-task.json  task-make-resume-task.json  task-no-review.json  task-t.json  v20260412.json
prompts/: aider_cli.md  claude_code_cli.md  codex_cli.md  demo_cli.md  gemini_cli.md  management.md  plan_critic.md  planning.md  research.md  reviewer.md  supervisor.md  verifier.md
reports/: README.md
runtime/: agents_md.py  context_store.py  deep_agent_factory.py  failure_classifier.py  git_manager.py  logging.py  model_profile_store.py  retry_prompt_builder.py  router.py  state_store.py
(+319 files in other folders)
